Changelog
=========

0.6.0 (2012-02-15)
------------------

* fixed e-mail layout [keul]
* when a workflow comment is given, it's added to the response e-mail
  when rejecting it [keul]

0.5.1 (2012-01-20)
------------------

* fixed error while retrieving e-mail [keul]
* Generic Setup profile version was not updated [keul]

0.5.0 (2012-01-20)
------------------

* downgraded to debug level the print of token URL message (when used) [keul]
* fixed workflow's worklist with right state id (if anybody still using it) [keul]
* fixed workflow reject/retract transitions [keul]
* the owner of the form is notified when the form is accepted and rejected [keul]
* supported notification also for anonymous submitters [keul]

0.4.0 (2012-01-11)
------------------

* fixed typo in translations [keul]
* added a soft dependency on `auslfe.formonline.tokenaccess`__ [keul]

__ http://pypi.python.org/pypi/auslfe.formonline.tokenaccess

0.3.0 (2011-12-13)
------------------

First pubic release

* added support for "Site Administrator" role
  (this **not** mean that we tested this on Plone 4.1) yet [keul]
* removed CMF skins directory (having it only for customize the ``getNotAddableTypes``
  script was not a good idea [keul]
* splitted the GS profile in two, a default core ones and another ones for register also
  the Page-like content. In this way a use could *not* use the FormOnline content [keul]
* FormOnline content set as not searchable and not shown in navigation [keul]
* removed the useless FormOnline view, transforming it to a viewlet registered for all
  content types marked as ``IFormOnline`` [keul]

0.2.0 (2011-05-06)
------------------

* enabled versioning [keul]
* changes to the content workflow [keul]
* i18n fixes [keul]
* some workflow changes [keul]
* FormOnline content has its own view [keul]
* added warning messages to the FormOnline view [keul]

0.1.0 (2010-07-19)
------------------

* Initial release [fdelia]